--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,14 @@
 CHRONOJUMP DETAILED CHANGELOG:
 
+24 aug 2007
+	- Makefile now compiles chronojump.prg (not chronojump.exe)
+	- chronojump_linux.sh executable it's included (if needed
+	exports the LD_LIBRARY_PATH from ~/.bashrc that's not on the gnome
+	environment. This allow to execute chronojump without terminal
+	debugging messages
+	- Program can be also called from the commandline with "mono chronojump.prg"
+	- Please, delete locally the chronojump.exe for not having confusion
+
 22 aug 2007 (2)
 	fixed bug in cancelling reactive jumps when we jumper is on (and he should be off) or viceversa.
 
