--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,16 @@
 CHRONOJUMP DETAILED CHANGELOG:
 
+4 set 2007
+	0.6-pre-3; 06-pre2
+	-Fixed bug in countingTotalTime on util (for treeviews) (it counted "-1"and "-")
+	-Added create_release.sh and chronojump_execute.cs
+	-play system bell on windows instead of wavs
+	-autodetection of ports disabled on Linux and Windows
+	-fixed bug on Util.TrimDecimals when sql returns a "-" (detected on stats RjEvolution)
+	-better code for show-hide action buttons
+	-Added lots of Chronopic info on manual
+	-Added MAINTAINERS file
+
 25 aug (2)
 	Added occitan translation
 
