updated es and ca
svn path=/trunk/; revision=295

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-09-26  Xavier de Blas  <xaviblas@gmail.com>
+
+        * es.po: Updated Spanish translation (merged with Jorge Gonzalez)
+        * es.po: Updated Catalan translation
+
 2007-09-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
         * es.po: Updated Spanish translation by Eduardo Ratamales and me.
